@@ -29,9 +29,9 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 import static org.keycloak.userprofile.config.UPConfigUtils.ROLE_ADMIN;
 import static org.keycloak.userprofile.config.UPConfigUtils.ROLE_USER;
+import static org.keycloak.userprofile.config.UPConfigUtils.parseSystemDefaultConfig;
 
 import jakarta.ws.rs.core.Response;
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -43,9 +43,12 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
 
+import org.hamcrest.Matchers;
 import org.junit.Assert;
 import org.junit.Test;
 import org.keycloak.admin.client.resource.RealmResource;
+import org.keycloak.common.Profile.Feature;
+import org.keycloak.common.util.MultivaluedHashMap;
 import org.keycloak.component.ComponentModel;
 import org.keycloak.component.ComponentValidationException;
 import org.keycloak.models.Constants;
@@ -53,10 +56,15 @@ import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.LDAPConstants;
 import org.keycloak.models.RealmModel;
 import org.keycloak.models.UserModel;
+import org.keycloak.representations.idm.AbstractUserRepresentation;
 import org.keycloak.representations.idm.ClientRepresentation;
 import org.keycloak.representations.idm.RealmRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.representations.userprofile.config.UPConfig.UnmanagedAttributePolicy;
+import org.keycloak.representations.userprofile.config.UPGroup;
 import org.keycloak.services.messages.Messages;
+import org.keycloak.testsuite.arquillian.annotation.EnableFeature;
+import org.keycloak.testsuite.arquillian.annotation.ModelTest;
 import org.keycloak.testsuite.runonserver.RunOnServer;
 import org.keycloak.userprofile.AttributeGroupMetadata;
 import org.keycloak.representations.userprofile.config.UPAttribute;
@@ -69,15 +77,18 @@ import org.keycloak.testsuite.util.ClientScopeBuilder;
 import org.keycloak.testsuite.util.KeycloakModelUtils;
 import org.keycloak.userprofile.Attributes;
 import org.keycloak.userprofile.UserProfile;
+import org.keycloak.userprofile.UserProfileConstants;
 import org.keycloak.userprofile.UserProfileContext;
 import org.keycloak.userprofile.UserProfileProvider;
 import org.keycloak.userprofile.ValidationException;
 import org.keycloak.userprofile.config.UPConfigUtils;
+import org.keycloak.userprofile.validator.MultiValueValidator;
+import org.keycloak.userprofile.validator.PersonNameProhibitedCharactersValidator;
 import org.keycloak.userprofile.validator.UsernameIDNHomographValidator;
-import org.keycloak.util.JsonSerialization;
 import org.keycloak.validate.ValidationError;
 import org.keycloak.validate.validators.EmailValidator;
 import org.keycloak.validate.validators.LengthValidator;
+import org.keycloak.validate.validators.UriValidator;
 
 /**
  * @author <a href="mailto:psilva@redhat.com">Pedro Igor</a>
@@ -92,8 +103,10 @@ public class UserProfileTest extends AbstractUserProfileTest {
         testRealm.setClientScopes(new ArrayList<>());
         testRealm.getClientScopes().add(ClientScopeBuilder.create().name("customer").protocol("openid-connect").build());
         testRealm.getClientScopes().add(ClientScopeBuilder.create().name("client-a").protocol("openid-connect").build());
+        testRealm.getClientScopes().add(ClientScopeBuilder.create().name("some-optional-scope").protocol("openid-connect").build());
         ClientRepresentation client = KeycloakModelUtils.createClient(testRealm, "client-a");
         client.setDefaultClientScopes(Collections.singletonList("customer"));
+        client.setOptionalClientScopes(Collections.singletonList("some-optional-scope"));
         KeycloakModelUtils.createClient(testRealm, "client-b");
     }
 
@@ -105,7 +118,9 @@ public class UserProfileTest extends AbstractUserProfileTest {
     @Test
     public void testReadOnlyAllowed() throws Exception {
         // create a user with attribute foo value 123 allowed by the profile now but disallowed later
-        UPConfig config = JsonSerialization.readValue("{\"attributes\": [{\"name\": \"foo\", \"permissions\": {\"edit\": [\"admin\"]}}]}", UPConfig.class);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("foo", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN))));
+        config.getAttribute(UserModel.EMAIL).setPermissions(new UPAttributePermissions(Set.of(ROLE_USER), Set.of(ROLE_ADMIN)));
         RealmResource realmRes = testRealm();
         realmRes.users().userProfile().update(config);
 
@@ -125,10 +140,24 @@ public class UserProfileTest extends AbstractUserProfileTest {
             RealmModel realm = session.getContext().getRealm();
             UserModel user = session.users().getUserById(realm, userId);
             UserProfileProvider provider = getUserProfileProvider(session);
-            provider.setConfiguration("{\"attributes\": [{\"name\": \"foo\", \"validations\": {\"length\": {\"min\": \"5\", \"max\": \"15\"}}, \"permissions\": {\"edit\": [\"admin\"]}}]}");
-
+            UPConfig upConfig = provider.getConfiguration();
+            upConfig.getAttribute("foo")
+                    .setValidations(Map.of("length", Map.of("min", "5", "max", "15")));
+            provider.setConfiguration(upConfig);
             Map<String, List<String>> attributes = new HashMap<>(user.getAttributes());
             UserProfile profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
+            profile.validate();
+        });
+
+        // it should work if foo is read-only in the context
+        getTestingClient().server(TEST_REALM_NAME).run(session -> {
+            RealmModel realm = session.getContext().getRealm();
+            UserModel user = session.users().getUserById(realm, userId);
+            user.setEmail(null);
+            UserProfileProvider provider = getUserProfileProvider(session);
+            Map<String, Object> attributes = new HashMap<>(user.getAttributes());
+            attributes.put("email", "");
+            UserProfile profile = provider.create(UserProfileContext.ACCOUNT, attributes, user);
             profile.validate();
         });
 
@@ -137,7 +166,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
             RealmModel realm = session.getContext().getRealm();
             UserModel user = session.users().getUserById(realm, userId);
             UserProfileProvider provider = getUserProfileProvider(session);
-            provider.setConfiguration("{\"attributes\": [{\"name\": \"foo\", \"validations\": {\"length\": {\"min\": \"5\", \"max\": \"15\"}}, \"permissions\": {\"edit\": [\"admin\", \"user\"]}}]}");
+            UPConfig upConfig = provider.getConfiguration();
+            UPAttribute changedFoo = upConfig.getAttribute("foo");
+            changedFoo.setPermissions(new UPAttributePermissions(Set.of(), Set.of(ROLE_USER, ROLE_ADMIN)));
+            changedFoo.setValidations(Map.of("length", Map.of("min", "5", "max", "15")));
+            provider.setConfiguration(upConfig);
 
             Map<String, List<String>> attributes = new HashMap<>(user.getAttributes());
             UserProfile profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
@@ -160,7 +193,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         // once created, profile attributes can not be changed
         assertTrue(profile.getAttributes().contains(UserModel.USERNAME));
-        assertNull(profile.getAttributes().getFirstValue(UserModel.USERNAME));
+        assertNull(profile.getAttributes().getFirst(UserModel.USERNAME));
     }
 
     @Test
@@ -171,14 +204,15 @@ public class UserProfileTest extends AbstractUserProfileTest {
     private static void testCustomAttributeInAnyContext(KeycloakSession session) {
         Map<String, Object> attributes = new HashMap<>();
 
-        attributes.put(UserModel.USERNAME, "profiled-user");
+        attributes.put(UserModel.USERNAME, org.keycloak.models.utils.KeycloakModelUtils.generateId());
         attributes.put(UserModel.FIRST_NAME, "John");
         attributes.put(UserModel.LAST_NAME, "Doe");
         attributes.put(UserModel.EMAIL, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
 
         UserProfileProvider provider = getUserProfileProvider(session);
-
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"address\", \"required\": {}, \"permissions\": {\"edit\": [\"user\"]}}]}");
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("address", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired()));
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
 
@@ -192,11 +226,55 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         containsInAnyOrder(UserModel.USERNAME, UserModel.EMAIL, UserModel.FIRST_NAME, UserModel.LAST_NAME, "address");
 
-        attributes.put("address", "myaddress");
-
-        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
-
+        // not writable in user api, no validation should happen
+        profile = provider.create(UserProfileContext.USER_API, attributes);
         profile.validate();
+
+        attributes.put("address", "myaddress");
+        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+        profile.validate();
+    }
+
+    @Test
+    public void testEmptyAttributeRemoved() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testEmptyAttributeRemoved);
+    }
+
+    private static void testEmptyAttributeRemoved(KeycloakSession session) {
+        Map<String, Object> attributes = new HashMap<>();
+
+        attributes.put(UserModel.USERNAME, org.keycloak.models.utils.KeycloakModelUtils.generateId());
+        attributes.put(UserModel.FIRST_NAME, "John");
+        attributes.put(UserModel.LAST_NAME, "Doe");
+        attributes.put(UserModel.EMAIL, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
+        attributes.put("address", "foo");
+
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("address", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER))));
+        provider.setConfiguration(config);
+
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+        UserModel user = profile.create();
+
+        // attribute explicitly set with an empty value so we assume it should be removed regardless the `removeAttributes` parameter being set to false
+        attributes.put("address", "");
+        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
+        profile.update(false);
+
+        assertNull(user.getFirstAttribute("address"));
+
+        attributes.put("address", "bar");
+        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
+        profile.update();
+        assertEquals("bar", user.getFirstAttribute("address"));
+
+        // attribute not provided so we assume there is no intention to remove the attribute
+        attributes.remove("address");
+        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
+        profile.update(false);
+
+        assertNotNull(user.getFirstAttribute("address"));
     }
 
     @Test
@@ -209,14 +287,15 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         Map<String, Object> attributes = new HashMap<>();
 
-        attributes.put(UserModel.USERNAME, "profiled-user");
+        attributes.put(UserModel.USERNAME, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
         attributes.put(UserModel.FIRST_NAME, "John");
         attributes.put(UserModel.LAST_NAME, "Doe");
         attributes.put(UserModel.EMAIL, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
 
         UserProfileProvider provider = getUserProfileProvider(session);
-
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"business.address\", \"required\": {\"scopes\": [\"customer\"]}, \"permissions\": {\"edit\": [\"user\"]}}]}");
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("business.address", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired(Set.of(), Set.of("customer"))));
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
 
@@ -242,9 +321,10 @@ public class UserProfileTest extends AbstractUserProfileTest {
     public void testValidation() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::failValidationWhenEmptyAttributes);
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testAttributeValidation);
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testEmailAsUsernameValidation);
     }
 
-    private static void failValidationWhenEmptyAttributes(KeycloakSession session) throws IOException {
+    private static void failValidationWhenEmptyAttributes(KeycloakSession session) {
         Map<String, Object> attributes = new HashMap<>();
         UserProfileProvider provider = session.getProvider(UserProfileProvider.class);
         provider.setConfiguration(null);
@@ -293,7 +373,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         email.setRequired(null);
 
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         attributes.clear();
         attributes.put(UserModel.USERNAME, "profile-user");
@@ -319,7 +399,30 @@ public class UserProfileTest extends AbstractUserProfileTest {
         assertFalse(profile.getAttributes().validate(UserModel.EMAIL, (Consumer<ValidationError>) errors::add));
         assertTrue(containsErrorMessage(errors, EmailValidator.MESSAGE_INVALID_EMAIL));
     }
-    
+
+    private static void testEmailAsUsernameValidation(KeycloakSession session) {
+        Map<String, Object> attributes = new HashMap<>();
+        UserProfileProvider provider = session.getProvider(UserProfileProvider.class);
+        provider.setConfiguration(null);
+        UserProfile profile;
+        RealmModel realm = session.getContext().getRealm();
+
+        try {
+            realm.setRegistrationEmailAsUsername(true);
+            attributes.clear();
+            attributes.put(UserModel.FIRST_NAME, "Joe");
+            attributes.put(UserModel.LAST_NAME, "Doe");
+            // valid email but invalid as username
+            attributes.put(UserModel.EMAIL, "foo%bar@example.com");
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            profile.validate();
+        } catch (ValidationException ve) {
+            Assert.fail("Should be OK email as username");
+        } finally {
+            realm.setRegistrationEmailAsUsername(false);
+        }
+    }
+
     private static boolean containsErrorMessage(List<ValidationError> errors, String message){
     	for(ValidationError err : errors) {
     		if(err.getMessage().equals(message)) {
@@ -328,34 +431,21 @@ public class UserProfileTest extends AbstractUserProfileTest {
     	}
     	return false;
     }
-    
+
 
     @Test
     public void testValidateComplianceWithUserProfile() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testValidateComplianceWithUserProfile);
     }
 
-    private static void testValidateComplianceWithUserProfile(KeycloakSession session) throws IOException {
+    private static void testValidateComplianceWithUserProfile(KeycloakSession session) {
         RealmModel realm = session.getContext().getRealm();
         UserModel user = session.users().addUser(realm, "profiled-user");
         UserProfileProvider provider = getUserProfileProvider(session);
 
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName("address");
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-
-        attribute.setRequired(requirements);
-
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(Collections.singleton(ROLE_USER));
-        attribute.setPermissions(permissions);
-
-        config.addAttribute(attribute);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("address", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired()));
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.ACCOUNT, user);
 
@@ -388,9 +478,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
         user.setFirstName("John");
         user.setLastName("John");
         user.setEmail(org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
-        UserProfileProvider provider = getUserProfileProvider(session);
 
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"address\", \"required\": {}, \"permissions\": {\"edit\": [\"user\"]}}]}");
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("address", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired()));
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.ACCOUNT, user);
         Attributes attributes = profile.getAttributes();
@@ -406,11 +498,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
             assertTrue(ve.isAttributeOnError("address"));
         }
 
-        assertNotNull(attributes.getFirstValue(UserModel.USERNAME));
-        assertNotNull(attributes.getFirstValue(UserModel.EMAIL));
-        assertNotNull(attributes.getFirstValue(UserModel.FIRST_NAME));
-        assertNotNull(attributes.getFirstValue(UserModel.LAST_NAME));
-        assertNull(attributes.getFirstValue("address"));
+        assertNotNull(attributes.getFirst(UserModel.USERNAME));
+        assertNotNull(attributes.getFirst(UserModel.EMAIL));
+        assertNotNull(attributes.getFirst(UserModel.FIRST_NAME));
+        assertNotNull(attributes.getFirst(UserModel.LAST_NAME));
+        assertNull(attributes.getFirst("address"));
 
         user.setAttribute("address", Arrays.asList("fixed-address"));
 
@@ -419,7 +511,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         profile.validate();
 
-        assertNotNull(attributes.getFirstValue("address"));
+        assertNotNull(attributes.getFirst("address"));
     }
 
     @Test
@@ -431,48 +523,31 @@ public class UserProfileTest extends AbstractUserProfileTest {
         RealmModel realm = session.getContext().getRealm();
         UserModel user = session.users().addUser(realm, org.keycloak.models.utils.KeycloakModelUtils.generateId());
         UserProfileProvider provider = getUserProfileProvider(session);
-
-        String configuration = "{\n" +
-                "  \"attributes\": [\n" +
-                "    {\n" +
-                "      \"name\": \"address\",\n" +
-                "      \"group\": \"companyaddress\"\n" +
-                "    },\n" +
-                "    {\n" +
-                "      \"name\": \"second\",\n" +
-                "      \"group\": \"groupwithanno" + "\"\n" +
-                "    }\n" +
-                "  ],\n" +
-                "  \"groups\": [\n" +
-                "    {\n" +
-                "      \"name\": \"companyaddress\",\n" +
-                "      \"displayHeader\": \"header\",\n" +
-                "      \"displayDescription\": \"description\"\n" +
-                "    },\n" +
-                "    {\n" +
-                "      \"name\": \"groupwithanno\",\n" +
-                "      \"annotations\": {\n" +
-                "        \"anno1\": \"value1\",\n" +
-                "        \"anno2\": \"value2\"\n" +
-                "      }\n" +
-                "    }\n" +
-                "  ]\n" +
-                "}\n";
-        provider.setConfiguration(configuration);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        UPGroup companyAddress = new UPGroup("companyaddress");
+        companyAddress.setDisplayHeader("header");
+        companyAddress.setDisplayDescription("description");
+        config.addGroup(companyAddress);
+        config.addOrReplaceAttribute(new UPAttribute("address", companyAddress));
+        UPGroup groupWithAnnotation = new UPGroup("groupwithanno");
+        groupWithAnnotation.setAnnotations(Map.of("anno1", "value1", "anno2", "value2"));
+        config.addGroup(groupWithAnnotation);
+        config.addOrReplaceAttribute(new UPAttribute("second", groupWithAnnotation));
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.ACCOUNT, user);
         Attributes attributes = profile.getAttributes();
 
         assertThat(attributes.nameSet(),
                 containsInAnyOrder(UserModel.USERNAME, UserModel.EMAIL, UserModel.FIRST_NAME, UserModel.LAST_NAME, UserModel.LOCALE, "address", "second"));
-        
-        
+
+
         AttributeGroupMetadata companyAddressGroup = attributes.getMetadata("address").getAttributeGroupMetadata();
         assertEquals("companyaddress", companyAddressGroup.getName());
         assertEquals("header", companyAddressGroup.getDisplayHeader());
         assertEquals("description", companyAddressGroup.getDisplayDescription());
         assertNull(companyAddressGroup.getAnnotations());
-        
+
         AttributeGroupMetadata groupwithannoGroup = attributes.getMetadata("second").getAttributeGroupMetadata();
         assertEquals("groupwithanno", groupwithannoGroup.getName());
         assertNull(groupwithannoGroup.getDisplayHeader());
@@ -488,25 +563,13 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testCreateAndUpdateUser);
     }
 
-    private static void testCreateAndUpdateUser(KeycloakSession session) throws IOException {
+    private static void testCreateAndUpdateUser(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
 
         UPConfig config = provider.getConfiguration();
-        UPAttribute attribute = new UPAttribute();
-        attribute.setName("address");
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(new HashSet<>(Arrays.asList("admin", "user")));
-        attribute.setPermissions(permissions);
-        config.addAttribute(attribute);
-
-        attribute = new UPAttribute();
-        attribute.setName("business.address");
-        permissions = new UPAttributePermissions();
-        permissions.setEdit(new HashSet<>(Arrays.asList("admin", "user")));
-        attribute.setPermissions(permissions);
-        config.addAttribute(attribute);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        config.addOrReplaceAttribute(new UPAttribute("address", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER))));
+        config.addOrReplaceAttribute(new UPAttribute("business.address", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER))));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
         String userName = org.keycloak.models.utils.KeycloakModelUtils.generateId();
@@ -533,9 +596,9 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributesUpdatedOldValues.put(UserModel.FIRST_NAME, "Joe");
         attributesUpdatedOldValues.put(UserModel.LAST_NAME, "Doe");
         attributesUpdatedOldValues.put(UserModel.EMAIL, "user@keycloak.org");
-        
+
         profile.update((attributeName, userModel, oldValue) -> {
-            assertTrue(attributesUpdated.add(attributeName)); 
+            assertTrue(attributesUpdated.add(attributeName));
             assertEquals(attributesUpdatedOldValues.get(attributeName), getSingleValue(oldValue));
             assertEquals(attributes.get(attributeName), userModel.getFirstAttribute(attributeName));
             });
@@ -554,13 +617,13 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         assertEquals("fixed-business-address", user.getFirstAttribute("business.address"));
     }
-    
+
     private static String getSingleValue(List<String> vals) {
         if(vals==null || vals.isEmpty())
             return null;
         return vals.get(0);
     }
-    
+
     @Test
     public void testReadonlyUpdates() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testReadonlyUpdates);
@@ -577,8 +640,9 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put("department", Arrays.asList("sales"));
 
         UserProfileProvider provider = getUserProfileProvider(session);
-
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"department\", \"permissions\": {\"edit\": [\"admin\"]}}]}");
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("department", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN))));
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.ACCOUNT, attributes);
         UserModel user = profile.create();
@@ -628,9 +692,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put(UserModel.EMAIL, "readonly@foo.bar");
 
         UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("email", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN))));
 
         // configure email r/o for user
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"email\", \"permissions\": {\"edit\": [ \"admin\"]}}]}");
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.ACCOUNT, attributes);
         UserModel user = profile.create();
@@ -647,15 +713,18 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put(UserModel.EMAIL, "cannot-change@foo.bar");
 
         profile = provider.create(UserProfileContext.ACCOUNT, attributes, user);
-
         try {
             profile.update();
             fail("Should fail since email is read only");
         } catch (ValidationException ve) {
             assertTrue(ve.isAttributeOnError("email"));
         }
-
         assertEquals("E-Mail address shouldn't be changed", "readonly@foo.bar", user.getEmail());
+
+        attributes.put(UserModel.EMAIL, "admin-can-change@foo.bar");
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        profile.update();
+        assertEquals("admin-can-change@foo.bar", user.getEmail());
     }
 
     @Test
@@ -672,9 +741,12 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put(UserModel.EMAIL, "canchange@foo.bar");
 
         UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+
+        config.getAttribute("email").getPermissions().setEdit(Set.of(ROLE_USER, ROLE_ADMIN));
 
         // configure email r/w for user
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"email\", \"permissions\": {\"edit\": [ \"user\", \"admin\"]}}]}");
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.ACCOUNT, attributes);
         UserModel user = profile.create();
@@ -714,10 +786,12 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put("phone", Arrays.asList("fixed-phone"));
 
         UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("department", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN))));
+        config.addOrReplaceAttribute(new UPAttribute("phone", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN))));
+        config.addOrReplaceAttribute(new UPAttribute("address", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN))));
+        provider.setConfiguration(config);
 
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"department\", \"permissions\": {\"edit\": [\"admin\"]}},"
-                + "{\"name\": \"phone\", \"permissions\": {\"edit\": [\"admin\"]}},"
-                + "{\"name\": \"address\", \"permissions\": {\"edit\": [\"admin\"]}}]}");
         UserProfile profile = provider.create(UserProfileContext.ACCOUNT, attributes);
         UserModel user = profile.create();
         assertThat(profile.getAttributes().nameSet(),
@@ -731,8 +805,8 @@ public class UserProfileTest extends AbstractUserProfileTest {
         profile.update((attributeName, userModel, oldValue) -> assertTrue(attributesUpdated.add(attributeName)));
         assertThat(attributesUpdated, containsInAnyOrder("department", "address", "phone"));
 
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"department\", \"permissions\": {\"edit\": [\"admin\"]}},"
-                + "{\"name\": \"phone\", \"permissions\": {\"edit\": [\"admin\"]}}]}");
+        config.removeAttribute("address");
+        provider.setConfiguration(config);
         attributesUpdated.clear();
         attributes.remove("address");
         attributes.put("department", "foo");
@@ -742,9 +816,8 @@ public class UserProfileTest extends AbstractUserProfileTest {
         assertThat(attributesUpdated, containsInAnyOrder("department", "phone"));
         assertTrue(user.getAttributes().containsKey("address"));
 
-        provider.setConfiguration("{\"attributes\": [{\"name\": \"department\", \"permissions\": {\"edit\": [\"admin\"]}},"
-                + "{\"name\": \"phone\", \"permissions\": {\"edit\": [\"admin\"]}},"
-                + "{\"name\": \"address\", \"permissions\": {\"edit\": [\"admin\"]}}]}");
+        config.addOrReplaceAttribute(new UPAttribute("address", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN))));
+        provider.setConfiguration(config);
         attributes.put("department", "foo");
         attributes.put("phone", "foo");
         attributes.put("address", "bar");
@@ -792,12 +865,10 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     private static void testInvalidConfiguration(KeycloakSession session) {
-        UserProfileProvider provider = getUserProfileProvider(session);
-
         try {
-            provider.setConfiguration("{\"validateConfigAttribute\": true}");
+            setConfiguration(session, "{\"validateConfigAttribute\": true}");
             fail("Should fail validation");
-        } catch (ComponentValidationException ve) {
+        } catch (RuntimeException ve) {
             // OK
         }
 
@@ -808,7 +879,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testResetConfiguration);
     }
 
-    private static void testResetConfiguration(KeycloakSession session) throws IOException {
+    private static void testResetConfiguration(KeycloakSession session) {
         setConfiguration(session, null);
         assertFalse(getComponentModel(session).isPresent());
     }
@@ -868,11 +939,9 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testCustomValidationForUsername);
     }
 
-    private static void testCustomValidationForUsername(KeycloakSession session) throws IOException {
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName(UserModel.USERNAME);
+    private static void testCustomValidationForUsername(KeycloakSession session) {
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        UPAttribute attribute = new UPAttribute(UserModel.USERNAME);
 
         Map<String, Object> validatorConfig = new HashMap<>();
 
@@ -880,10 +949,10 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         attribute.addValidation(LengthValidator.ID, validatorConfig);
 
-        config.addAttribute(attribute);
+        config.addOrReplaceAttribute(attribute);
 
         UserProfileProvider provider = getUserProfileProvider(session);
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -910,7 +979,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         provider.setConfiguration(null);
 
-        attributes.put(UserModel.USERNAME, "user");
+        attributes.put(UserModel.USERNAME, ROLE_USER);
         attributes.put(UserModel.EMAIL, "user@keycloak.org");
         attributes.put(UserModel.FIRST_NAME, "Joe");
         attributes.put(UserModel.LAST_NAME, "Doe");
@@ -925,7 +994,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testRemoveDefaultValidationFromUsername);
     }
 
-    private static void testRemoveDefaultValidationFromUsername(KeycloakSession session) throws IOException {
+    private static void testRemoveDefaultValidationFromUsername(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
 
         // reset configuration to default
@@ -944,7 +1013,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
             profile.validate();
             fail("Should fail validation");
         } catch (ValidationException ve) {
-            assertTrue(ve.hasError(Messages.INVALID_USERNAME));
+            assertTrue(ve.hasError(UsernameIDNHomographValidator.MESSAGE_NO_MATCH));
         }
 
         UPConfig config = provider.getConfiguration();
@@ -956,7 +1025,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
             }
         }
 
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
 
@@ -964,26 +1033,60 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     @Test
+    public void testHomographValidator() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testHomographValidator);
+    }
+
+    private static void testHomographValidator(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+
+        UPAttribute attribute = config.getAttribute(UserModel.LAST_NAME);
+        attribute.addValidation(UsernameIDNHomographValidator.ID, Map.of(UsernameIDNHomographValidator.CFG_ERROR_MESSAGE, "error-something"));
+        provider.setConfiguration(config);
+        try {
+            Map<String, Object> attributes = new HashMap<>();
+
+            attributes.put(UserModel.USERNAME, "abc");
+            attributes.put(UserModel.EMAIL, "test@keycloak.org");
+            attributes.put(UserModel.FIRST_NAME, "Foo");
+            attributes.put(UserModel.LAST_NAME, "你好世界");
+
+            UserProfile profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+
+            try {
+                profile.validate();
+                fail("Should fail validation");
+            } catch (ValidationException ve) {
+                assertTrue(ve.hasError("error-something"));
+            }
+        } finally {
+            attribute.getValidations().remove(UsernameIDNHomographValidator.ID);
+            provider.setConfiguration(config);
+        }
+    }
+
+    @Test
     public void testOptionalAttributes() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testOptionalAttributes);
     }
 
-    private static void testOptionalAttributes(KeycloakSession session) throws IOException {
+    private static void testOptionalAttributes(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
         UPAttribute attribute = new UPAttribute();
         attribute.setName(UserModel.FIRST_NAME);
         Map<String, Object> validatorConfig = new HashMap<>();
         validatorConfig.put(LengthValidator.KEY_MAX, 4);
         attribute.addValidation(LengthValidator.ID, validatorConfig);
-        config.addAttribute(attribute);
+        config.addOrReplaceAttribute(attribute);
 
         attribute = new UPAttribute();
         attribute.setName(UserModel.LAST_NAME);
         attribute.addValidation(LengthValidator.ID, validatorConfig);
-        config.addAttribute(attribute);
+        config.addOrReplaceAttribute(attribute);
 
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1022,13 +1125,138 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     @Test
+    @ModelTest(realmName = "test")
+    public void testPersonNameProhibitedCharsValidator(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+
+        UPAttribute lastNameAttr = config.getAttribute(UserModel.LAST_NAME);
+        Map<String, Object> origValidatorCfg = lastNameAttr.getValidations().get(PersonNameProhibitedCharactersValidator.ID);
+        try {
+            // Should fail with the default error message
+            Map<String, Object> attributes = new HashMap<>();
+
+            attributes.put(UserModel.USERNAME, "abc");
+            attributes.put(UserModel.EMAIL, "test@keycloak.org");
+            attributes.put(UserModel.FIRST_NAME, "Foo");
+            attributes.put(UserModel.LAST_NAME, "Jo&hn");
+
+            UserProfile profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+
+            try {
+                profile.validate();
+                fail("Should fail validation");
+            } catch (ValidationException ve) {
+                assertTrue(ve.hasError(PersonNameProhibitedCharactersValidator.MESSAGE_NO_MATCH));
+            }
+
+            // custom error message should be used
+            lastNameAttr.getValidations().put(PersonNameProhibitedCharactersValidator.ID, Map.of(PersonNameProhibitedCharactersValidator.CFG_ERROR_MESSAGE, "error-something"));
+            provider.setConfiguration(config);
+
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            try {
+                profile.validate();
+                fail("Should fail validation");
+            } catch (ValidationException ve) {
+                assertTrue(ve.hasError("error-something"));
+            }
+
+            // error-message config parameters used with empty value. Default error message should be used
+            lastNameAttr = config.getAttribute(UserModel.LAST_NAME);
+            lastNameAttr.getValidations().put(PersonNameProhibitedCharactersValidator.ID, Map.of(PersonNameProhibitedCharactersValidator.CFG_ERROR_MESSAGE, ""));
+            provider.setConfiguration(config);
+
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            try {
+                profile.validate();
+                fail("Should fail validation");
+            } catch (ValidationException ve) {
+                assertTrue(ve.hasError(PersonNameProhibitedCharactersValidator.MESSAGE_NO_MATCH));
+            }
+        } finally {
+            // Rollback
+            lastNameAttr.getValidations().put(PersonNameProhibitedCharactersValidator.ID, origValidatorCfg);
+            provider.setConfiguration(config);
+        }
+    }
+
+    @Test
+    @ModelTest(realmName = "test")
+    public void testUriValidator(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+
+        UPAttribute attribute = new UPAttribute("picture-url");
+        attribute.addValidation(UriValidator.ID, new HashMap<>());
+        config.addOrReplaceAttribute(attribute);
+        provider.setConfiguration(config);
+
+        try {
+            // Should fail with the default error message
+            Map<String, Object> attributes = new HashMap<>();
+            attributes.put(UserModel.USERNAME, "abc");
+            attributes.put("picture-url", "some-invalid-url");
+
+            UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+            try {
+                profile.validate();
+                fail("Should fail validation");
+            } catch (ValidationException ve) {
+                assertTrue(ve.hasError(UriValidator.MESSAGE_INVALID_URI));
+            }
+
+            // URL with fragment should be OK by default
+            attributes.put("picture-url", "https://somehost/somepath?param=foo#frg=bar");
+            profile = provider.create(UserProfileContext.USER_API, attributes);
+            profile.validate();
+
+            // Not allow fragment
+            attribute.addValidation(UriValidator.ID, Map.of(UriValidator.KEY_ALLOW_FRAGMENT, false));
+            config.addOrReplaceAttribute(attribute);
+            provider.setConfiguration(config);
+
+            attributes.put("picture-url", "https://somehost/somepath?param=foo#frg=bar");
+            profile = provider.create(UserProfileContext.USER_API, attributes);
+            try {
+                profile.validate();
+                fail("Should fail validation");
+            } catch (ValidationException ve) {
+                assertTrue(ve.hasError(UriValidator.MESSAGE_INVALID_FRAGMENT));
+            }
+
+            // not allow file URL by default
+            attributes.put("picture-url", "file:///somefile.txt");
+            profile = provider.create(UserProfileContext.USER_API, attributes);
+            try {
+                profile.validate();
+                fail("Should fail validation");
+            } catch (ValidationException ve) {
+                assertTrue(ve.hasError(UriValidator.MESSAGE_INVALID_SCHEME));
+            }
+
+            // Allow file scheme and check it works
+            attribute.addValidation(UriValidator.ID, Map.of(UriValidator.KEY_ALLOWED_SCHEMES, Arrays.asList("https", "http", "file")));
+            config.addOrReplaceAttribute(attribute);
+            provider.setConfiguration(config);
+
+            attributes.put("picture-url", "file:///somefile.txt");
+            profile = provider.create(UserProfileContext.USER_API, attributes);
+            profile.validate();
+        } finally {
+            config.removeAttribute("picture-url");
+            provider.setConfiguration(config);
+        }
+    }
+
+    @Test
     public void testCustomAttributeRequired() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testCustomAttributeRequired);
     }
 
-    private static void testCustomAttributeRequired(KeycloakSession session) throws IOException {
+    private static void testCustomAttributeRequired(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
         UPAttribute attribute = new UPAttribute();
 
         attribute.setName(ATT_ADDRESS);
@@ -1047,9 +1275,9 @@ public class UserProfileTest extends AbstractUserProfileTest {
         permissions.setEdit(Collections.singleton(ROLE_USER));
         attribute.setPermissions(permissions);
 
-        config.addAttribute(attribute);
+        config.addOrReplaceAttribute(attribute);
 
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1088,13 +1316,46 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     @Test
+    public void testNullAttributesInConfig() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testNullAttributesInConfig);
+    }
+
+    private static void testNullAttributesInConfig(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.setAttributes(null);
+        config.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ENABLED);
+
+        provider.setConfiguration(config);
+
+        Map<String, Object> attributes = new HashMap<>();
+
+        attributes.put(UserModel.USERNAME, "user");
+        attributes.put(UserModel.FIRST_NAME, "John");
+        attributes.put(UserModel.LAST_NAME, "Doe");
+        attributes.put(UserModel.EMAIL, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
+
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+
+        profile.validate();
+
+        config.setAttributes(Collections.emptyList());
+        try {
+            provider.setConfiguration(config);
+            Assert.fail("Expected to fail as we are trying to remove required attributes email and username");
+        } catch (ComponentValidationException cve) {
+            //ignore
+        }
+    }
+
+    @Test
     public void testCustomAttributeOptional() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testCustomAttributeOptional);
     }
 
-    private static void testCustomAttributeOptional(KeycloakSession session) throws IOException {
+    private static void testCustomAttributeOptional(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
         UPAttribute attribute = new UPAttribute();
 
         attribute.setName(ATT_ADDRESS);
@@ -1103,9 +1364,9 @@ public class UserProfileTest extends AbstractUserProfileTest {
         validatorConfig.put(LengthValidator.KEY_MIN, 4);
         attribute.addValidation(LengthValidator.ID, validatorConfig);
 
-        config.addAttribute(attribute);
+        config.addOrReplaceAttribute(attribute);
 
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
         attributes.put(UserModel.USERNAME, "user");
@@ -1144,26 +1405,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testRequiredIfUser);
     }
 
-    private static void testRequiredIfUser(KeycloakSession session) throws IOException {
+    private static void testRequiredIfUser(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName(ATT_ADDRESS);
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-
-        requirements.setRoles(Collections.singleton(ROLE_USER));
-
-        attribute.setRequired(requirements);
-
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(Collections.singleton(ROLE_USER));
-        attribute.setPermissions(permissions);
-
-        config.addAttribute(attribute);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired(Set.of(ROLE_USER), Set.of())));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1207,26 +1453,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testRequiredIfAdmin);
     }
 
-    private static void testRequiredIfAdmin(KeycloakSession session) throws IOException {
+    private static void testRequiredIfAdmin(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName(ATT_ADDRESS);
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-
-        requirements.setRoles(Collections.singleton(ROLE_ADMIN));
-
-        attribute.setRequired(requirements);
-
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(Collections.singleton(UPConfigUtils.ROLE_ADMIN));
-        attribute.setPermissions(permissions);
-
-        config.addAttribute(attribute);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN)), new UPAttributeRequired(Set.of(ROLE_ADMIN), Set.of())));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1257,27 +1488,125 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     @Test
+    @ModelTest(realmName=TEST_REALM_NAME)
+    public void testEmailRequired(KeycloakSession session) {
+        RealmModel realm = session.getContext().getRealm();
+
+        Map<String, Object> attributes = new HashMap<>();
+        attributes.put(UserModel.USERNAME, "james");
+        attributes.put(UserModel.FIRST_NAME, "James");
+        attributes.put(UserModel.LAST_NAME, "Doe");
+        UserProfile profile;
+
+        // Email required for users by default, but not for admins
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        provider.setConfiguration(config);
+        UPAttribute emailOrigConfig = config.getAttribute(UserModel.EMAIL);
+        Assert.assertEquals(emailOrigConfig.getRequired().getRoles(), Set.of(ROLE_USER)); // Should be required only for users by default
+
+        try {
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            profile.validate();
+            Assert.fail("Should not be here as email is required for users");
+        } catch (ValidationException ve) {
+            // expected
+        }
+        try {
+            profile = provider.create(UserProfileContext.USER_API, attributes);
+            profile.validate();
+        } catch (ValidationException ve) {
+            Assert.fail("Should not be here as email is NOT required for administrators");
+        }
+
+        // Test email required in config, registrationEmailAsUsername = false : Email should be required
+        config.addOrReplaceAttribute(new UPAttribute(UserModel.EMAIL, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER)), new UPAttributeRequired(Set.of(ROLE_ADMIN, ROLE_USER), Set.of())));
+        provider.setConfiguration(config);
+
+        try {
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            profile.validate();
+            Assert.fail("Should not be here as email is required for users");
+        } catch (ValidationException ve) {
+            // expected
+        }
+        try {
+            profile = provider.create(UserProfileContext.USER_API, attributes);
+            profile.validate();
+            Assert.fail("Should not be here as email is required for administrators");
+        } catch (ValidationException ve) {
+            // expected
+        }
+
+        // Test email required in config, registrationEmailAsUsername = true : Email should be required
+        try {
+            realm.setRegistrationEmailAsUsername(true);
+            try {
+                profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+                profile.validate();
+                Assert.fail("Should not be here as email is required for users");
+            } catch (ValidationException ve) {
+                // expected
+            }
+            try {
+                profile = provider.create(UserProfileContext.USER_API, attributes);
+                profile.validate();
+                Assert.fail("Should not be here as email is required for administrators");
+            } catch (ValidationException ve) {
+                // expected
+            }
+        } finally {
+            realm.setRegistrationEmailAsUsername(false);
+        }
+
+        // Test email NOT required in config, registrationEmailAsUsername = true : Email should be required
+        config.addOrReplaceAttribute(new UPAttribute(UserModel.EMAIL, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER)), null));
+        provider.setConfiguration(config);
+        try {
+            realm.setRegistrationEmailAsUsername(true);
+            try {
+                profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+                profile.validate();
+                Assert.fail("Should not be here as email is required for users");
+            } catch (ValidationException ve) {
+                // expected
+            }
+            try {
+                profile = provider.create(UserProfileContext.USER_API, attributes);
+                profile.validate();
+                Assert.fail("Should not be here as email is required for administrators");
+            } catch (ValidationException ve) {
+                // expected
+            }
+        } finally {
+            realm.setRegistrationEmailAsUsername(false);
+        }
+
+        // Test email NOT required in config, registrationEmailAsUsername = false : Email should NOT be required
+        try {
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            profile.validate();
+        } catch (ValidationException ve) {
+            Assert.fail("Should not be here as email is required for users");
+        }
+        try {
+            profile = provider.create(UserProfileContext.USER_API, attributes);
+            profile.validate();
+        } catch (ValidationException ve) {
+            Assert.fail("Should not be here as email is required for administrators");
+        }
+    }
+
+    @Test
     public void testNoValidationsIfUserReadOnly() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testNoValidationsIfUserReadOnly);
     }
 
-    private static void testNoValidationsIfUserReadOnly(KeycloakSession session) throws IOException {
+    private static void testNoValidationsIfUserReadOnly(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName(ATT_ADDRESS);
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-        attribute.setRequired(requirements);
-
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(Collections.singleton(UPConfigUtils.ROLE_ADMIN));
-        attribute.setPermissions(permissions);
-
-        config.addAttribute(attribute);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN)), new UPAttributeRequired()));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1306,23 +1635,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testNoValidationsIfAdminReadOnly);
     }
 
-    private static void testNoValidationsIfAdminReadOnly(KeycloakSession session) throws IOException {
+    private static void testNoValidationsIfAdminReadOnly(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName(ATT_ADDRESS);
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-        attribute.setRequired(requirements);
-
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(Collections.singleton(UPConfigUtils.ROLE_USER));
-        attribute.setPermissions(permissions);
-
-        config.addAttribute(attribute);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired()));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1347,32 +1664,12 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testIgnoreReadOnlyAttribute);
     }
 
-    private static void testIgnoreReadOnlyAttribute(KeycloakSession session) throws IOException {
+    private static void testIgnoreReadOnlyAttribute(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
-        UPAttribute firstName = new UPAttribute();
-
-        firstName.setName(UserModel.FIRST_NAME);
-
-        UPAttribute address = new UPAttribute();
-
-        address.setName(ATT_ADDRESS);
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-        requirements.setRoles(Collections.singleton(UPConfigUtils.ROLE_USER));
-        address.setRequired(requirements);
-        firstName.setRequired(requirements);
-
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(Collections.singleton(UPConfigUtils.ROLE_USER));
-        permissions.setView(Collections.singleton(ROLE_ADMIN));
-        address.setPermissions(permissions);
-        firstName.setPermissions(permissions);
-
-        config.addAttribute(address);
-        config.addAttribute(firstName);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(ROLE_ADMIN), Set.of(ROLE_USER)), new UPAttributeRequired(Set.of(ROLE_USER), Set.of())));
+        config.addOrReplaceAttribute(new UPAttribute(UserModel.FIRST_NAME, new UPAttributePermissions(Set.of(ROLE_ADMIN), Set.of(ROLE_USER)), new UPAttributeRequired(Set.of(ROLE_USER), Set.of())));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1417,7 +1714,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testReadOnlyInternalAttributeValidation);
     }
 
-    private static void testReadOnlyInternalAttributeValidation(KeycloakSession session) throws IOException {
+    private static void testReadOnlyInternalAttributeValidation(KeycloakSession session) {
         RealmModel realm = session.getContext().getRealm();
         UserModel maria = session.users().addUser(realm, "maria");
 
@@ -1443,26 +1740,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testRequiredByClientScope);
     }
 
-    private static void testRequiredByClientScope(KeycloakSession session) throws IOException {
+    private static void testRequiredByClientScope(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName(ATT_ADDRESS);
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-
-        requirements.setScopes(Collections.singleton("client-a"));
-
-        attribute.setRequired(requirements);
-
-        UPAttributePermissions permissions = new UPAttributePermissions();
-        permissions.setEdit(Collections.singleton("user"));
-        attribute.setPermissions(permissions);
-
-        config.addAttribute(attribute);
-
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired(Set.of(), Set.of("client-a"))));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1523,31 +1805,86 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     @Test
+    @ModelTest
+    public void testRequiredByOptionalClientScope(KeycloakSession session) {
+        RealmModel realm = session.realms().getRealmByName("test");
+        session.getContext().setRealm(realm);
+
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER)), new UPAttributeRequired(Set.of(ROLE_ADMIN, ROLE_USER), Set.of("some-optional-scope"))));
+        provider.setConfiguration(config);
+
+        Map<String, Object> attributes = new HashMap<>();
+
+        attributes.put(UserModel.USERNAME, "user");
+        attributes.put(UserModel.FIRST_NAME, "John");
+        attributes.put(UserModel.LAST_NAME, "Doe");
+        attributes.put(UserModel.EMAIL, "user@email.test");
+
+        // client with default scopes. No address scope included
+        configureAuthenticationSession(session, "client-a", null);
+
+        // No fail on admin and account console as they do not have scopes
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+        profile.validate();
+        profile = provider.create(UserProfileContext.ACCOUNT, attributes);
+        profile.validate();
+
+        // no fail on auth flow scopes when scope is not required
+        profile = provider.create(UserProfileContext.REGISTRATION, attributes);
+        profile.validate();
+        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+        profile.validate();
+        profile = provider.create(UserProfileContext.IDP_REVIEW, attributes);
+        profile.validate();
+
+        // client with default scopes for which is attribute NOT configured as required
+        configureAuthenticationSession(session, "client-a", Set.of("some-optional-scope"));
+
+        // No fail on admin and account console as they do not have scopes
+        profile = provider.create(UserProfileContext.USER_API, attributes);
+        profile.validate();
+        profile = provider.create(UserProfileContext.ACCOUNT, attributes);
+        profile.validate();
+
+        // fail on auth flow scopes when scope is required
+        try {
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            profile.validate();
+            fail("Should fail validation");
+        } catch (ValidationException ve) {
+            assertTrue(ve.isAttributeOnError(ATT_ADDRESS));
+        }
+        try {
+            profile = provider.create(UserProfileContext.REGISTRATION, attributes);
+            profile.validate();
+            fail("Should fail validation");
+        } catch (ValidationException ve) {
+            assertTrue(ve.isAttributeOnError(ATT_ADDRESS));
+        }
+        try {
+            profile = provider.create(UserProfileContext.IDP_REVIEW, attributes);
+            profile.validate();
+            fail("Should fail validation");
+        } catch (ValidationException ve) {
+            assertTrue(ve.isAttributeOnError(ATT_ADDRESS));
+        }
+    }
+
+    @Test
     public void testConfigurationInvalidScope() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testConfigurationInvalidScope);
     }
 
-    private static void testConfigurationInvalidScope(KeycloakSession session) throws IOException {
-        RealmModel realm = session.getContext().getRealm();
+    private static void testConfigurationInvalidScope(KeycloakSession session) {
         UserProfileProvider provider = getUserProfileProvider(session);
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName(ATT_ADDRESS);
-
-        UPAttributeRequired requirements = new UPAttributeRequired();
-
-        requirements.setScopes(Collections.singleton("invalid"));
-
-        attribute.setRequired(requirements);
-
-        attribute.setSelector(new UPAttributeSelector());
-        attribute.getSelector().setScopes(Collections.singleton("invalid"));
-
-        config.addAttribute(attribute);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)),
+                new UPAttributeRequired(Set.of(), Set.of("invalid")), new UPAttributeSelector(Set.of("invalid"))));
 
         try {
-            provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+            provider.setConfiguration(config);
             Assert.fail("Expected to fail due to invalid client scope");
         } catch (ComponentValidationException cve) {
             //ignore
@@ -1559,7 +1896,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testUsernameAndEmailPermissionNotSetIfEmpty);
     }
 
-    private static void testUsernameAndEmailPermissionNotSetIfEmpty(KeycloakSession session) throws IOException {
+    private static void testUsernameAndEmailPermissionNotSetIfEmpty(KeycloakSession session){
         UserProfileProvider provider = getUserProfileProvider(session);
         UPConfig config = provider.getConfiguration();
 
@@ -1569,7 +1906,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
             }
         }
 
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         RealmModel realm = session.getContext().getRealm();
         String username = "profiled-user-profile";
@@ -1602,11 +1939,14 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put("foo", Arrays.asList("foo"));
 
         UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.removeAttribute(UserModel.FIRST_NAME);
+        config.removeAttribute(UserModel.LAST_NAME);
+        config.addOrReplaceAttribute(new UPAttribute("test-attribute", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER, ROLE_ADMIN))));
+        config.addOrReplaceAttribute(new UPAttribute("foo", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER, ROLE_ADMIN))));
+        config.addOrReplaceAttribute(new UPAttribute("email", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER, ROLE_ADMIN))));
 
-        provider.setConfiguration("{\"attributes\": ["
-                + "{\"name\": \"test-attribute\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"foo\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"email\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}}]}");
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
         UserModel user = profile.create();
@@ -1629,46 +1969,42 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         profile = provider.create(UserProfileContext.USER_API, user);
         Attributes userAttributes = profile.getAttributes();
-        assertEquals("new-email@test.com", userAttributes.getFirstValue(UserModel.EMAIL));
-        assertEquals("Test Value", userAttributes.getFirstValue("test-attribute"));
-        assertEquals("changed", userAttributes.getFirstValue("foo"));
+        assertEquals("new-email@test.com", userAttributes.getFirst(UserModel.EMAIL));
+        assertEquals("Test Value", userAttributes.getFirst("test-attribute"));
+        assertEquals("changed", userAttributes.getFirst("foo"));
 
         attributes.remove("foo");
-        attributes.put("test-attribute", userAttributes.getFirstValue("test-attribute"));
+        attributes.put("test-attribute", userAttributes.getFirst("test-attribute"));
         profile = provider.create(UserProfileContext.USER_API, attributes, user);
         profile.update(true);
         profile = provider.create(UserProfileContext.USER_API, user);
         userAttributes = profile.getAttributes();
         // remove attribute if not set
-        assertEquals("new-email@test.com", userAttributes.getFirstValue(UserModel.EMAIL));
-        assertEquals("Test Value", userAttributes.getFirstValue("test-attribute"));
-        assertNull(userAttributes.getFirstValue("foo"));
+        assertEquals("new-email@test.com", userAttributes.getFirst(UserModel.EMAIL));
+        assertEquals("Test Value", userAttributes.getFirst("test-attribute"));
+        assertNull(userAttributes.getFirst("foo"));
 
-        provider.setConfiguration("{\"attributes\": ["
-                + "{\"name\": \"test-attribute\", \"permissions\": {\"edit\": [\"user\"]}},"
-                + "{\"name\": \"foo\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"email\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}}]}");
+        config.addOrReplaceAttribute(new UPAttribute("test-attribute", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER))));
+        provider.setConfiguration(config);
         attributes.remove("test-attribute");
         profile = provider.create(UserProfileContext.USER_API, attributes, user);
         profile.update(true);
         profile = provider.create(UserProfileContext.USER_API, user);
         userAttributes = profile.getAttributes();
         // do not remove test-attribute because admin does not have write permissions
-        assertEquals("new-email@test.com", userAttributes.getFirstValue(UserModel.EMAIL));
-        assertEquals("Test Value", userAttributes.getFirstValue("test-attribute"));
+        assertEquals("new-email@test.com", userAttributes.getFirst(UserModel.EMAIL));
+        assertEquals("Test Value", userAttributes.getFirst("test-attribute"));
 
-        provider.setConfiguration("{\"attributes\": ["
-                + "{\"name\": \"test-attribute\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"foo\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"email\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}}]}");
+        config.addOrReplaceAttribute(new UPAttribute("test-attribute", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER, ROLE_ADMIN))));
+        provider.setConfiguration(config);
         attributes.remove("test-attribute");
         profile = provider.create(UserProfileContext.USER_API, attributes, user);
         profile.update(true);
         profile = provider.create(UserProfileContext.USER_API, user);
         userAttributes = profile.getAttributes();
         // removes the test-attribute attribute because now admin has write permission
-        assertEquals("new-email@test.com", userAttributes.getFirstValue(UserModel.EMAIL));
-        assertNull(userAttributes.getFirstValue("test-attribute"));
+        assertEquals("new-email@test.com", userAttributes.getFirst(UserModel.EMAIL));
+        assertNull(userAttributes.getFirst("test-attribute"));
     }
 
     @Test
@@ -1685,12 +2021,12 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put("test-attribute", List.of(""));
 
         UserProfileProvider provider = getUserProfileProvider(session);
-
-        provider.setConfiguration("{\"attributes\": ["
-                + "{\"name\": \"test-attribute\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"firstName\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"lastName\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}},"
-                + "{\"name\": \"email\", \"permissions\": {\"edit\": [\"admin\", \"user\"]}}]}");
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("test-attribute", new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER))));
+        config.addOrReplaceAttribute(new UPAttribute(UserModel.FIRST_NAME, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER))));
+        config.addOrReplaceAttribute(new UPAttribute(UserModel.LAST_NAME, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER))));
+        config.addOrReplaceAttribute(new UPAttribute(UserModel.EMAIL, new UPAttributePermissions(Set.of(), Set.of(ROLE_ADMIN, ROLE_USER))));
+        provider.setConfiguration(config);
 
         UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
         UserModel user = profile.create();
@@ -1711,11 +2047,11 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     private static void assertRemoveEmptyRootAttribute(Map<String, List<String>> attributes, UserModel user, Attributes upAttributes) {
-        assertNull(upAttributes.getFirstValue(UserModel.LAST_NAME));
+        assertNull(upAttributes.getFirst(UserModel.LAST_NAME));
         assertNull(user.getLastName());
-        assertNull(upAttributes.getFirstValue(UserModel.EMAIL));
+        assertNull(upAttributes.getFirst(UserModel.EMAIL));
         assertNull(user.getEmail());
-        assertEquals(upAttributes.getFirstValue(UserModel.FIRST_NAME), attributes.get(UserModel.FIRST_NAME).get(0));
+        assertEquals(upAttributes.getFirst(UserModel.FIRST_NAME), attributes.get(UserModel.FIRST_NAME).get(0));
     }
 
     @Test
@@ -1723,16 +2059,14 @@ public class UserProfileTest extends AbstractUserProfileTest {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testRemoveOptionalAttributesFromDefaultConfigIfNotSet);
     }
 
-    private static void testRemoveOptionalAttributesFromDefaultConfigIfNotSet(KeycloakSession session) throws IOException {
-        UPConfig config = new UPConfig();
-        UPAttribute attribute = new UPAttribute();
-
-        attribute.setName("foo");
-
-        config.addAttribute(attribute);
+    private static void testRemoveOptionalAttributesFromDefaultConfigIfNotSet(KeycloakSession session) {
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("foo"));
+        config.removeAttribute(UserModel.FIRST_NAME);
+        config.removeAttribute(UserModel.LAST_NAME);
 
         UserProfileProvider provider = getUserProfileProvider(session);
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        provider.setConfiguration(config);
 
         Map<String, Object> attributes = new HashMap<>();
 
@@ -1748,13 +2082,282 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         UPAttribute firstName = new UPAttribute();
         firstName.setName(UserModel.FIRST_NAME);
-        config.addAttribute(firstName);
+        config.addOrReplaceAttribute(firstName);
         UPAttribute lastName = new UPAttribute();
         lastName.setName(UserModel.LAST_NAME);
-        config.addAttribute(lastName);
-        provider.setConfiguration(JsonSerialization.writeValueAsString(config));
+        config.addOrReplaceAttribute(lastName);
+        provider.setConfiguration(config);
         profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
         assertTrue(profile.getAttributes().contains(UserModel.FIRST_NAME));
         assertTrue(profile.getAttributes().contains(UserModel.LAST_NAME));
+    }
+
+    @Test
+    public void testUnmanagedPolicy() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testUnmanagedPolicy);
+    }
+
+    private static void testUnmanagedPolicy(KeycloakSession session) {
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.addOrReplaceAttribute(new UPAttribute("bar", new UPAttributePermissions(Set.of(), Set.of(ROLE_USER, ROLE_ADMIN))));
+        UserProfileProvider provider = getUserProfileProvider(session);
+        provider.setConfiguration(config);
+
+        // can't create attribute if policy is disabled
+        Map<String, Object> attributes = new HashMap<>();
+        attributes.put(UserModel.USERNAME, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
+        attributes.put(UserModel.EMAIL, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
+        attributes.put("foo", List.of("foo"));
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+        UserModel user = profile.create();
+        assertFalse(user.getAttributes().containsKey("foo"));
+
+        // user already set with an unmanaged attribute, and it should be visible if policy is adminEdit
+        user.setSingleAttribute("foo", "foo");
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        assertFalse(profile.getAttributes().contains("foo"));
+        config.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ADMIN_EDIT);
+        provider.setConfiguration(config);
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        assertTrue(profile.getAttributes().contains("foo"));
+        assertFalse(profile.getAttributes().isReadOnly("foo"));
+
+        // user already set with an unmanaged attribute, and it should be visible if policy is adminView but read-only
+        config.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ADMIN_VIEW);
+        provider.setConfiguration(config);
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        assertTrue(profile.getAttributes().contains("foo"));
+        assertTrue(profile.getAttributes().isReadOnly("foo"));
+
+        // user already set with an unmanaged attribute, but it is not available to user-facing contexts
+        config.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ADMIN_VIEW);
+        provider.setConfiguration(config);
+        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
+        assertFalse(profile.getAttributes().contains("foo"));
+
+        // user already set with an unmanaged attribute, and it is available to all contexts
+        config.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ENABLED);
+        provider.setConfiguration(config);
+        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes, user);
+        assertTrue(profile.getAttributes().contains("foo"));
+        assertFalse(profile.getAttributes().isReadOnly("foo"));
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        assertTrue(profile.getAttributes().contains("foo"));
+        assertFalse(profile.getAttributes().isReadOnly("foo"));
+    }
+
+    @Test
+    public void testOptionalRootAttributesAsUnmanagedAttribute() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testOptionalRootAttributesAsUnmanagedAttribute);
+    }
+
+    private static void testOptionalRootAttributesAsUnmanagedAttribute(KeycloakSession session) {
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        UserProfileProvider provider = getUserProfileProvider(session);
+        provider.setConfiguration(config);
+        Map<String, String> rawAttributes = new HashMap<>();
+        rawAttributes.put(UserModel.USERNAME, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
+        rawAttributes.put(UserModel.EMAIL, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
+        rawAttributes.put(UserModel.FIRST_NAME, "firstName");
+        rawAttributes.put(UserModel.LAST_NAME, "lastName");
+        UserProfile profile = provider.create(UserProfileContext.USER_API, rawAttributes);
+        UserModel user = profile.create();
+        assertEquals(rawAttributes.get(UserModel.FIRST_NAME), user.getFirstName());
+        assertEquals(rawAttributes.get(UserModel.LAST_NAME), user.getLastName());
+        AbstractUserRepresentation rep = profile.toRepresentation();
+        assertEquals(rawAttributes.get(UserModel.FIRST_NAME), rep.getFirstName());
+        assertEquals(rawAttributes.get(UserModel.LAST_NAME), rep.getLastName());
+        assertNull(rep.getAttributes());
+
+        config.removeAttribute(UserModel.FIRST_NAME);
+        config.removeAttribute(UserModel.LAST_NAME);
+        provider.setConfiguration(config);
+        profile = provider.create(UserProfileContext.USER_API, user);
+        Attributes attributes = profile.getAttributes();
+        assertNull(attributes.getFirst(UserModel.FIRST_NAME));
+        assertNull(attributes.getFirst(UserModel.LAST_NAME));
+        rep = profile.toRepresentation();
+        assertNull(rep.getFirstName());
+        assertNull(rep.getLastName());
+        assertNull(rep.getAttributes());
+
+        rawAttributes.put(UserModel.FIRST_NAME, "firstName");
+        rawAttributes.put(UserModel.LAST_NAME, "lastName");
+        config.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ADMIN_EDIT);
+        provider.setConfiguration(config);
+        profile = provider.create(UserProfileContext.USER_API, user);
+        attributes = profile.getAttributes();
+        assertEquals(rawAttributes.get(UserModel.FIRST_NAME), attributes.getFirst(UserModel.FIRST_NAME));
+        assertEquals(rawAttributes.get(UserModel.LAST_NAME), attributes.getFirst(UserModel.LAST_NAME));
+        rep = profile.toRepresentation();
+        assertNull(rep.getFirstName());
+        assertNull(rep.getLastName());
+        assertNull(rep.getAttributes());
+
+        rawAttributes.remove(UserModel.LAST_NAME);
+        rawAttributes.put(UserModel.FIRST_NAME, "firstName");
+        profile = provider.create(UserProfileContext.USER_API, rawAttributes, user);
+        attributes = profile.getAttributes();
+        assertEquals(rawAttributes.get(UserModel.FIRST_NAME), attributes.getFirst(UserModel.FIRST_NAME));
+        assertNull(attributes.getFirst(UserModel.LAST_NAME));
+        rep = profile.toRepresentation();
+        assertNull(rep.getFirstName());
+        assertNull(rep.getLastName());
+        assertNull(rep.getAttributes());
+
+        rawAttributes.put(UserModel.LAST_NAME, "lastNameChanged");
+        rawAttributes.put(UserModel.FIRST_NAME, "firstNameChanged");
+        profile = provider.create(UserProfileContext.USER_API, rawAttributes, user);
+        attributes = profile.getAttributes();
+        assertEquals(rawAttributes.get(UserModel.FIRST_NAME), attributes.getFirst(UserModel.FIRST_NAME));
+        assertEquals(rawAttributes.get(UserModel.LAST_NAME), attributes.getFirst(UserModel.LAST_NAME));
+        rep = profile.toRepresentation();
+        assertNull(rep.getFirstName());
+        assertNull(rep.getLastName());
+        assertNull(rep.getAttributes());
+    }
+
+    @Test
+    public void testAttributeNormalization() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testAttributeNormalization);
+    }
+
+    private static void testAttributeNormalization(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        Map<String, String> attributes = new HashMap<>();
+        attributes.put(UserModel.USERNAME, "TesT");
+        attributes.put(UserModel.EMAIL, "TesT@TesT.org");
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+        Attributes profileAttributes = profile.getAttributes();
+        assertEquals(attributes.get(UserModel.USERNAME).toLowerCase(), profileAttributes.getFirst(UserModel.USERNAME));
+        assertEquals(attributes.get(UserModel.EMAIL).toLowerCase(), profileAttributes.getFirst(UserModel.EMAIL));
+    }
+
+    @EnableFeature(Feature.UPDATE_EMAIL)
+    @Test
+    public void testEmailAttributeInUpdateEmailContext() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testEmailAttributeInUpdateEmailContext);
+    }
+
+    private static void testEmailAttributeInUpdateEmailContext(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        String userName = org.keycloak.models.utils.KeycloakModelUtils.generateId();
+        Map<String, String> attributes = new HashMap<>();
+
+        attributes.put(UserModel.USERNAME, userName);
+        attributes.put(UserModel.EMAIL, userName + "@keycloak.org");
+        attributes.put(UserModel.FIRST_NAME, "Joe");
+        attributes.put(UserModel.LAST_NAME, "Doe");
+
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+        UserModel user = profile.create();
+
+        profile = provider.create(UserProfileContext.UPDATE_EMAIL, user);
+        containsInAnyOrder(profile.getAttributes().nameSet(), UserModel.EMAIL);
+
+        UPConfig upConfig = provider.getConfiguration();
+        upConfig.addOrReplaceAttribute(new UPAttribute("foo", new UPAttributePermissions(Set.of(), Set.of(UserProfileConstants.ROLE_USER)), new UPAttributeRequired(Set.of(UserProfileConstants.ROLE_USER), Set.of())));
+        provider.setConfiguration(upConfig);
+        profile = provider.create(UserProfileContext.UPDATE_EMAIL, attributes, user);
+        profile.update();
+
+        upConfig = provider.getConfiguration();
+        upConfig.getAttribute(UserModel.EMAIL).getValidations().put(LengthValidator.ID, Map.of("min", "1", "max", "2"));
+        provider.setConfiguration(upConfig);
+        profile = provider.create(UserProfileContext.UPDATE_EMAIL, attributes, user);
+        try {
+            profile.update();
+        } catch (ValidationException ve) {
+            assertTrue(ve.isAttributeOnError(UserModel.EMAIL));
+            assertTrue(ve.hasError(LengthValidator.MESSAGE_INVALID_LENGTH));
+        }
+     }
+
+    @Test
+    public void testMultivalued() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testMultivalued);
+    }
+
+    private static void testMultivalued(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig upConfig = UPConfigUtils.parseSystemDefaultConfig();
+        provider.setConfiguration(upConfig);
+        String userName = org.keycloak.models.utils.KeycloakModelUtils.generateId();
+        Map<String, List<String>> attributes = new HashMap<>();
+
+        attributes.put(UserModel.USERNAME, List.of(userName));
+        attributes.put(UserModel.EMAIL, List.of(userName + "@keycloak.org"));
+        attributes.put(UserModel.FIRST_NAME, List.of("Joe"));
+        attributes.put(UserModel.LAST_NAME, List.of("Doe"));
+
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+        UserModel user = profile.create();
+        profile = provider.create(UserProfileContext.USER_API, user);
+
+        containsInAnyOrder(profile.getAttributes().nameSet(), UserModel.EMAIL);
+
+        UPAttribute foo = new UPAttribute("foo", new UPAttributePermissions(Set.of(), Set.of(UserProfileConstants.ROLE_ADMIN)));
+        upConfig.addOrReplaceAttribute(foo);
+        provider.setConfiguration(upConfig);
+        List<String> expectedValues = List.of("a", "b");
+        attributes.put("foo", expectedValues);
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        try {
+            profile.update();
+            fail("Should fail because foo attribute is single-valued by default");
+        } catch (ValidationException ve) {
+            assertTrue(ve.hasError(MultiValueValidator.MESSAGE_INVALID_SIZE));
+        }
+
+        foo.setMultivalued(true);
+        upConfig.addOrReplaceAttribute(foo);
+        provider.setConfiguration(upConfig);
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        profile.update();
+        List<String> actualValues = user.getAttributes().get("foo");
+        assertThat(actualValues, Matchers.containsInAnyOrder(expectedValues.toArray()));
+
+        attributes.put("foo", List.of("a", "b", "c"));
+        foo.addValidation(MultiValueValidator.ID, Map.of(MultiValueValidator.KEY_MAX, 2));
+        provider.setConfiguration(upConfig);
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        try {
+            profile.update();
+            fail("Should fail because foo attribute expects 2 values");
+        } catch (ValidationException ve) {
+            assertTrue(ve.hasError(MultiValueValidator.MESSAGE_INVALID_SIZE));
+        }
+
+        attributes.put("foo", List.of("a"));
+        foo.addValidation(MultiValueValidator.ID, Map.of(MultiValueValidator.KEY_MIN, 2, MultiValueValidator.KEY_MAX, 2));
+        provider.setConfiguration(upConfig);
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        try {
+            profile.update();
+            fail("Should fail because foo attribute expects at least 2 values");
+        } catch (ValidationException ve) {
+            assertTrue(ve.hasError(MultiValueValidator.MESSAGE_INVALID_SIZE));
+        }
+
+        attributes.put("foo", List.of("a", "b"));
+        foo.addValidation(MultiValueValidator.ID, Map.of(MultiValueValidator.KEY_MIN, 2, MultiValueValidator.KEY_MAX, 2));
+        provider.setConfiguration(upConfig);
+        profile = provider.create(UserProfileContext.USER_API, attributes, user);
+        profile.update();
+    }
+
+    @Test
+    public void testDefaultConfigWhenComponentConfigIsNotSet() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testDefaultConfigWhenComponentConfigIsNotSet);
+    }
+
+    private static void testDefaultConfigWhenComponentConfigIsNotSet(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        provider.setConfiguration(parseSystemDefaultConfig());
+        RealmModel realm = session.getContext().getRealm();
+        ComponentModel component = realm.getComponentsStream(realm.getId(), UserProfileProvider.class.getName()).findAny().get();
+        component.setConfig(new MultivaluedHashMap<>());
+        realm.updateComponent(component);
+        provider.create(UserProfileContext.USER_API, Map.of());
     }
 }
